--- a/templates/form_main.html
+++ b/templates/form_main.html
@@ -1,41 +1,45 @@
 <link href="static/css/materialize.min.css" rel="stylesheet">
-<form>
-    <div class="row">
-        <div class="input-field col s6">
-          <input id="Name" type="text" class="validate">
-          <label for="Name" class="active">Name</label>
-        </div>
-        <div class="input-field col s6">
-          <input id="Email" type="text" class="validate">
-          <label for="Email" class="active">Email</label>
-        </div>
-        <div class="input-field col s6">
-          <input  id="phone_number" type="text" class="validate">
-          <label for="phone_number" class="active">Phone Number</label>
-        </div>
-        <div class="input-field col s6">
-          <!-- <input id="college" type="text" class="validate"> -->
-          <input id="college" type="text" class="validate">
-          <label for="college" class="active">College</label>
-        </div>
-        <div>
-          <ul class="collapsible" data-collapsible="accordion">
-            <li>
-              <div class="collapsible-header">First</div>
-              <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
-            </li>
-            <li>
-              <div class="collapsible-header">Second</div>
-              <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
-            </li>
-            <li>
-              <div class="collapsible-header">Third</div>
-              <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
-            </li>
-          </ul>
-        </div>
+  <div class="container">
+    <div class="z-depth-2">
+      <div>
+        <h3 style="text-align: center;">Registration</h3>
+        <form style="max-width: 90%; margin: 0 auto;" action="{{url_for('form_submit')}}">
+            <div class="row">
+                <div class="input-field col s6">
+                  <input id="personname" name="personname" type="text" class="validate" value="{{request.form.personname}}">
+                  <label for="personname" class="active">Name</label>
+                </div>
+                <div class="input-field col s6">
+                  <input id="email" name="email" type="text" class="validate">
+                  <label for="email" class="active">Email</label>
+                </div>
+                <div class="input-field col s6">
+                  <input  id="phone_number" name="phone_number"  type="text" class="validate">
+                  <label for="phone_number" class="active">Phone Number</label>
+                </div>
+                <div class="input-field col s6">
+                  <input id="college" name="college" type="text" class="validate">
+                  <label for="college" class="active">College</label>
+                </div>
+            </div>
+            <h4>Workshops</h4>
+            <div class="row">
+              <div style="padding-left: 1cm;">
+                <div>
+                  <input type="checkbox" id="iot" name="iot">
+                  <label for="filled-in-box">Internet of things (IoT)</label>
+                </div>
+              </div>
+            </div>
+            <div class="row" style="padding-bottom: 1cm;">
+              <div style="padding-left: 1cm;">
+                <button type="submit" class="waves-effect waves-light btn">Submit</button>  
+              </div>
+            </div>
+        </form>
+      </div>
     </div>
-</form>
+  </div>
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="static/js/materialize.min.js"></script>
 
