--- a/static/css/style.css
+++ b/static/css/style.css
@@ -54,8 +54,8 @@ header,
 {
   #mainlogo
   {
-    width: 100px !important;
-    height: 100px !important;
+    width: 5cm !important;
+    height: 5cm !important;
 
   }
 }
