--- a/static/css/style.css
+++ b/static/css/style.css
@@ -58,6 +58,14 @@ header,
     height: 5cm !important;
 
   }
+  #tagline
+  {
+    visibility: hidden;
+  }
+  #titlemain
+  {
+    padding-top: 0px;
+  }
 }
 
 /*@media (min-width: 768px)
